--- a/index.html
+++ b/index.html
@@ -7,29 +7,26 @@
     <title>Consulta-Car</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400;600&family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-black bg-danger navbar-expand-lg ">
+    <header class="bg-fofofo border-bottom border-dark">
+        <nav class="navbar navbar-black navbar-expand-lg ">
             <div class="container">
                 <div class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"        aria-expanded="false"> <img class="logo" src="/img/menu.png" alt=""> </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="/paginas/info-patentes.html">Info por patente.</a></lir>
                         <li><a class="dropdown-item" href="/paginas/documentacion-obligatoria.html">Documentacion obligatoria.</a></li>
-                        <li><a class="dropdown-item" href="/paginas/conducir-mejor.html">Conducir mejor.</a></li>
+                        <li><a class="dropdown-item" href="/paginas/conducir-mejor.html">Conductor Prudente.</a></li>
                         <li><a class="dropdown-item" href="/paginas/leyes.html">Codigo y Leyes de transito.</a></li>
                     </ul>
                 </div>
-                <a class="navbar-brand border border-dark rounded-pill" href="index.html">Consulta-Car <img class="logo" src="/img/servicio-de-auto.png" alt=""></a>     
+                <a class="navbar-brand border border-dark rounded-pill boton" href="index.html">Consulta-Car <img class="logo" src="/img/servicio-de-auto.png" alt=""></a>     
             </div>
         </nav>
     </header>
 <!---->
-    <main class="contenedor">        
+    <main class="contenedor bg-main">        
         <div class="titulo-consultacar">
             <h1 class="display-1">CONSULTACAR</h1>
             <H2>EL SITIO WEB GRATUITO PARA CONSULTAR EL HISTORIAL DE TU AUTOMOVIL</H2>
@@ -37,23 +34,23 @@
         <div class="container acceso-rapido">
             <div class="row">
                 <div class="col-md-4 alinear">
-                    <a class="boton" href="http://">Consultar historial</a>
+                    <a class="boton rounded-pill" href="http://">Consulta tu patente</a>
                 </div>
                 <div class="col-md-4 alinear">
-                    <a class="boton" href="http://">Documentacion obligatoria</a>
+                    <a class="boton rounded-pill" href="http://">Documentacion obligatoria</a>
                 </div>
                 <div class="col-md-4 alinear" >
-                    <a class="boton" href="http://">Categorias de licencia</a>
+                    <a class="boton rounded-pill" href="http://">Categorias de licencia</a>
                 </div>
             </div>
         </div>
         <div class="container acceso-rapido">
             <div class="row">
                 <div class="col-md-6 alinear">
-                    <a class="boton" href="http://">Conducir Seguro</a>
+                    <a class="boton rounded-pill" href="http://">Conductor Prudente</a>
                 </div>
                 <div class="col-md-6 alinear">
-                    <a class="boton" href="http://">Conducir Seguro</a>
+                    <a class="boton rounded-pill" href="http://">Leyes</a>
                 </div>
                 
             </div>
@@ -62,7 +59,7 @@
     
 
 
-    <footer class="container-fluid bg-danger" >
+    <footer class="container-fluid bg-fofofo " >
         <div class="container">
             <div class="row justify-content-evenly">
                 <div class="col-4">
