--- a/paginas/leyes.html
+++ b/paginas/leyes.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-black bg-danger navbar-expand-lg ">
+    <header class="bg-fofofo border-bottom border-dark">
+        <nav class="navbar navbar-black navbar-expand-lg ">
             <div class="container">
                 <div class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"        aria-expanded="false"> <img class="logo" src="/img/menu.png" alt=""> </a>
@@ -21,7 +21,7 @@
                         <li><a class="dropdown-item" href="/paginas/leyes.html">Codigo y Leyes de transito.</a></li>
                     </ul>
                 </div>
-                <a class="navbar-brand border border-dark rounded-pill" href="/index.html">Consulta-Car <img class="logo" src="/img/servicio-de-auto.png" alt=""></a>     
+                <a class="navbar-brand border border-dark rounded-pill boton" href="/index.html">Consulta-Car <img class="logo" src="/img/servicio-de-auto.png" alt=""></a>     
             </div>
         </nav>
     </header>
@@ -33,7 +33,7 @@ COLOCAR LINKS CON LAS LEYES. QUE SE ABRAN EN UNNA NUEVA PESTAÑA
 
 
 
-    <footer class="container-fluid bg-danger" >
+    <footer class="container-fluid bg-fofofo " >
         <div class="container">
             <div class="row justify-content-evenly">
                 <div class="col-4">
@@ -52,10 +52,10 @@ COLOCAR LINKS CON LAS LEYES. QUE SE ABRAN EN UNNA NUEVA PESTAÑA
                     <li>
                         <a href="https://twitter.com/?lang=es"> <img src="/img/003-twit.png" alt=""> </a>
                     </li>
-                    </ul>
-                </div>
-            </div>    
-        </div>
+                </ul>
+            </div>
+        </div>    
+    </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
