--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <nav class="navbar navbar-black navbar-expand-lg ">
             <div class="container">
                 <div class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"        aria-expanded="false"> <img class="logo" src="/img/menu.png" alt=""> </a>
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"        aria-expanded="false"> <img class="logo" src="img/menu.png" alt=""> </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/paginas/info-patentes.html">Info por patente.</a></lir>
-                        <li><a class="dropdown-item" href="/paginas/documentacion-obligatoria.html">Documentacion obligatoria.</a></li>
-                        <li><a class="dropdown-item" href="/paginas/conducir-mejor.html">Conductor Prudente.</a></li>
-                        <li><a class="dropdown-item" href="/paginas/leyes.html">Codigo y Leyes de transito.</a></li>
+                        <li><a class="dropdown-item" href="paginas/info-patentes.html">Info por patente.</a></lir>
+                        <li><a class="dropdown-item" href="paginas/documentacion-obligatoria.html">Documentacion obligatoria.</a></li>
+                        <li><a class="dropdown-item" href="paginas/conducir-mejor.html">Conductor Prudente.</a></li>
+                        <li><a class="dropdown-item" href="paginas/leyes.html">Codigo y Leyes de transito.</a></li>
                     </ul>
                 </div>
-                <a class="navbar-brand border border-dark rounded-pill boton" href="index.html">Consulta-Car <img class="logo" src="/img/servicio-de-auto.png" alt=""></a>     
+                <a class="navbar-brand border border-dark rounded-pill boton" href="index.html">Consulta-Car <img class="logo" src="img/servicio-de-auto.png" alt=""></a>     
             </div>
         </nav>
     </header>
