--- a/paginas/conducir-mejor.html
+++ b/paginas/conducir-mejor.html
@@ -6,22 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consulta-Car</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
     <header class="bg-fofofo border-bottom border-dark">
         <nav class="navbar navbar-black navbar-expand-lg ">
             <div class="container">
                 <div class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"        aria-expanded="false"> <img class="logo" src="/img/menu.png" alt=""> </a>
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"        aria-expanded="false"> <img class="logo" src="../img/menu.png" alt=""> </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/paginas/info-patentes.html">Info por patente.</a></lir>
-                        <li><a class="dropdown-item" href="/paginas/documentacion-obligatoria.html">Documentacion obligatoria.</a></li>
-                        <li><a class="dropdown-item" href="/paginas/conducir-mejor.html">Conducir mejor.</a></li>
-                        <li><a class="dropdown-item" href="/paginas/leyes.html">Codigo y Leyes de transito.</a></li>
+                        <li><a class="dropdown-item" href="../paginas/info-patentes.html">Info por patente.</a></lir>
+                        <li><a class="dropdown-item" href="../paginas/documentacion-obligatoria.html">Documentacion obligatoria.</a></li>
+                        <li><a class="dropdown-item" href="../paginas/conducir-mejor.html">Conducir mejor.</a></li>
+                        <li><a class="dropdown-item" href="../paginas/leyes.html">Codigo y Leyes de transito.</a></li>
                     </ul>
                 </div>
-                <a class="navbar-brand border border-dark rounded-pill boton" href="/index.html">Consulta-Car <img class="logo" src="/img/servicio-de-auto.png" alt=""></a>     
+                <a class="navbar-brand border border-dark rounded-pill boton" href="../index.html">Consulta-Car <img class="logo" src="../img/servicio-de-auto.png" alt=""></a>     
             </div>
         </nav>
     </header>
@@ -44,13 +44,13 @@
                 <div class="col-3 redes justify-content-center">
                     <ul>
                     <li>
-                        <a href="https://www.instagram.com/"> <img src="/img/001-instagram.png" alt=""> </a>
+                        <a href="https://www.instagram.com/"> <img src="../img/001-instagram.png" alt=""> </a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/"> <img src="/img/002-facebook.png" alt=""> </a>
+                        <a href="https://www.facebook.com/"> <img src="../img/002-facebook.png" alt=""> </a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/?lang=es"> <img src="/img/003-twit.png" alt=""> </a>
+                        <a href="https://twitter.com/?lang=es"> <img src="../img/003-twit.png" alt=""> </a>
                     </li>
                 </ul>
             </div>
