--- a/paginas/documentacion-obligatoria.html
+++ b/paginas/documentacion-obligatoria.html
@@ -6,32 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consulta-Car</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
     <header class="bg-fofofo border-bottom border-dark">
         <nav class="navbar navbar-black navbar-expand-lg ">
             <div class="container">
                 <div class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"        aria-expanded="false"> <img class="logo" src="/img/menu.png" alt=""> </a>
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"        aria-expanded="false"> <img class="logo" src="../img/menu.png" alt=""> </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/paginas/info-patentes.html">Info por patente.</a></lir>
-                        <li><a class="dropdown-item" href="/paginas/documentacion-obligatoria.html">Documentacion obligatoria.</a></li>
-                        <li><a class="dropdown-item" href="/paginas/conducir-mejor.html">Conducir mejor.</a></li>
-                        <li><a class="dropdown-item" href="/paginas/leyes.html">Codigo y Leyes de transito.</a></li>
+                        <li><a class="dropdown-item" href="../paginas/info-patentes.html">Info por patente.</a></lir>
+                        <li><a class="dropdown-item" href="../paginas/documentacion-obligatoria.html">Documentacion obligatoria.</a></li>
+                        <li><a class="dropdown-item" href="../paginas/conducir-mejor.html">Conducir mejor.</a></li>
+                        <li><a class="dropdown-item" href="../paginas/leyes.html">Codigo y Leyes de transito.</a></li>
                     </ul>
                 </div>
-                <a class="navbar-brand border border-dark rounded-pill boton" href="/index.html">Consulta-Car <img class="logo" src="/img/servicio-de-auto.png" alt=""></a>     
+                <a class="navbar-brand border border-dark rounded-pill boton" href="../index.html">Consulta-Car <img class="logo" src="../img/servicio-de-auto.png" alt=""></a>     
             </div>
         </nav>
     </header>
     
+    <article class="container">
+            <h3 class="titulo" >¿SABES CUAL ES LA DOCUMENTACION OBLIGATORIA?</h3>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/QceDXVoYSm8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            
 
-<h1 style="padding: 80px;">DOCUMENTACION OBLIGATORIA</h1>
-ARMAR UN CARROUSEL DE IMAGENES CON LOS PAPELES OBLIGATORIOS
+            <ul>
+                <li>DNI.</li>
+                <li>Licencia Nacional de Conducir.</li>
+                <li>Cédula verde o cédula azul.</li>
+                <li>Comprobante de seguro en vigencia.</li>
+                <li>Comprobante de pago del impuesto a la radicación del vehículo (sólo en algunas jurisdicciones).</li>
+                <li>Constancia RTO (Revisión Técnica Obligatoria) o VTV (Verificación Técnica Vehicular).</li>
+                <li>Patentes legibles, normalizadas y sin aditamentos.</li>
+            </ul>
 
-
-
+                <p>
+                Para viajar seguros en familia, en el auto debe haber la misma cantidad de cinturones de seguridad que ocupantes. Si son menores, no olvidemos sujetarlos a la sillita que corresponda según la edad o el peso que tengan. También debe haber un matafuego de 1 kg, espejos retrovisores en ambos lados y balizas portátiles por si debemos parar en la ruta por algún imprevisto.
+                </p>
+    </article>            
 
     <footer class="container-fluid bg-fofofo " >
         <div class="container">
@@ -44,13 +59,13 @@ ARMAR UN CARROUSEL DE IMAGENES CON LOS PAPELES OBLIGATORIOS
                 <div class="col-3 redes justify-content-center">
                     <ul>
                     <li>
-                        <a href="https://www.instagram.com/"> <img src="/img/001-instagram.png" alt=""> </a>
+                        <a href="https://www.instagram.com/"> <img src="../img/001-instagram.png" alt=""> </a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/"> <img src="/img/002-facebook.png" alt=""> </a>
+                        <a href="https://www.facebook.com/"> <img src="../img/002-facebook.png" alt=""> </a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/?lang=es"> <img src="/img/003-twit.png" alt=""> </a>
+                        <a href="https://twitter.com/?lang=es"> <img src="../img/003-twit.png" alt=""> </a>
                     </li>
                 </ul>
             </div>
