--- a/paginas/leyes.html
+++ b/paginas/leyes.html
@@ -6,30 +6,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consulta-Car</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
     <header class="bg-fofofo border-bottom border-dark">
         <nav class="navbar navbar-black navbar-expand-lg ">
             <div class="container">
                 <div class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"        aria-expanded="false"> <img class="logo" src="/img/menu.png" alt=""> </a>
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"        aria-expanded="false"> <img class="logo" src="../img/menu.png" alt=""> </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/paginas/info-patentes.html">Info por patente.</a></lir>
-                        <li><a class="dropdown-item" href="/paginas/documentacion-obligatoria.html">Documentacion obligatoria.</a></li>
-                        <li><a class="dropdown-item" href="/paginas/conducir-mejor.html">Conducir mejor.</a></li>
-                        <li><a class="dropdown-item" href="/paginas/leyes.html">Codigo y Leyes de transito.</a></li>
+                        <li><a class="dropdown-item" href="../paginas/info-patentes.html">Info por patente.</a></lir>
+                        <li><a class="dropdown-item" href="../paginas/documentacion-obligatoria.html">Documentacion obligatoria.</a></li>
+                        <li><a class="dropdown-item" href="../paginas/conducir-mejor.html">Conducir mejor.</a></li>
+                        <li><a class="dropdown-item" href="../paginas/leyes.html">Codigo y Leyes de transito.</a></li>
                     </ul>
                 </div>
-                <a class="navbar-brand border border-dark rounded-pill boton" href="/index.html">Consulta-Car <img class="logo" src="/img/servicio-de-auto.png" alt=""></a>     
+                <a class="navbar-brand border border-dark rounded-pill boton" href="../index.html">Consulta-Car <img class="logo" src="../img/servicio-de-auto.png" alt=""></a>     
             </div>
         </nav>
     </header>
     
+    <section class="container">
+        <h3 class="titulo">CODIGO DE TRANSITO Y LEYES</h3>
+        <div class="container ">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4 alin-img">
+                    <img src="../img/libro.png" class="img-thumbnail " alt="...">
+                    <a href="#" class="card-link"> LEY 24.449 </a>
+                    </div>
+                    <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">LEY 24.449</h5>
+                        <p class="card-text"> Esta ley es el codigo nacional de transito de la republica Argentina. Regula el uso de la vía pública, siendo de aplicación a la circulación de personas, animales y vehículos terrestres en la vía pública y a las actividades vinculadas con el transporte, los vehículos, las personas, las concesiones viales, la estructura vial y el medio ambiente, en cuanto fueren con causa del tránsito.</p>
+                    </div>
+                    </div>
+                </div>
+            </div>
 
-<h1 style="padding: 80px;"> LEYES </h1>
-COLOCAR LINKS CON LAS LEYES. QUE SE ABRAN EN UNNA NUEVA PESTAÑA
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4 alin-img">
+                    <img src="../img/libro.png" class="img-thumbnail " alt="...">
+                    <a href="#" class="card-link"> LEY 24.449 </a>
+                    </div>
+                    <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">LEY 24.449</h5>
+                        <p class="card-text"> Esta ley es el codigo nacional de transito de la republica Argentina. Regula el uso de la vía pública, siendo de aplicación a la circulación de personas, animales y vehículos terrestres en la vía pública y a las actividades vinculadas con el transporte, los vehículos, las personas, las concesiones viales, la estructura vial y el medio ambiente, en cuanto fueren con causa del tránsito.</p>
+                    </div>
+                    </div>
+                </div>
+            </div>
 
+        </div>
+    </section>
 
 
 
@@ -44,13 +75,13 @@ COLOCAR LINKS CON LAS LEYES. QUE SE ABRAN EN UNNA NUEVA PESTAÑA
                 <div class="col-3 redes justify-content-center">
                     <ul>
                     <li>
-                        <a href="https://www.instagram.com/"> <img src="/img/001-instagram.png" alt=""> </a>
+                        <a href="https://www.instagram.com/"> <img src="../img/001-instagram.png" alt=""> </a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/"> <img src="/img/002-facebook.png" alt=""> </a>
+                        <a href="https://www.facebook.com/"> <img src="../img/002-facebook.png" alt=""> </a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/?lang=es"> <img src="/img/003-twit.png" alt=""> </a>
+                        <a href="https://twitter.com/?lang=es"> <img src="../img/003-twit.png" alt=""> </a>
                     </li>
                 </ul>
             </div>
